[package]
name = "rollgui"
version = "0.10.4"
authors = ["Bastien Sevajol <contact@bux.fr>"]
edition = "2018"

[dependencies]
coffee = { version = "0.4.1", features = ["opengl"] }
rand = "0.6"
pickledb = "0.4.0"
websocket = "0.24.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
url = "2.1.1"
image = "0.21"
pathfinding = "2.0.4"
futures = "0.3.5"
sentry = "0.19.0"
rust-ini = "0.16.0"
zip = "0.5.9"
linked-hash-map = "0.5.3"
webbrowser = "0.5.5"
native-tls = "0.2.7"
structopt = "0.3.21"
dialog="0.3.0"
crossbeam-channel = "0.5"
glob = "0.3.0"

gfx = "0.18.2"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
gfx_glyph = "0.17.0"
glutin = "0.26.0"
